--- a/Приклад схеми комунікацій.md
+++ b/Приклад схеми комунікацій.md
@@ -5,6 +5,9 @@ Data: 2023-12-06
 ---
 ![[m.png]]
 Так може виглядати схема комунікацій в якомусь проекті. Як згадував раніше є в нас такі модулі [[Connector Manager]] і [[Server Logic]] і [[Master]]. Tasker на цьому прикладі і являються [[Server Logic]] а gpt 3 і Translator це [[Connector Manager]]. У всіх модулях повинні бути карти щоб знали куди відправляти пакет.
+### Приклад великою схеми
+![[pp.jpg]]
+Як в цьому прикладі то Client 7 має вже відправити по більш кородшому шляху чим інші
 ## Idea
 ```dataview
 LIST FROM ""
