edit base template

--- a/Приклад схеми комунікацій.md
+++ b/Приклад схеми комунікацій.md
@@ -8,43 +8,55 @@ Data: 2023-12-06
 ### Приклад великою схеми
 ![[pp.jpg]]
 Як в цьому прикладі то Client 7 має вже відправити по більш кородшому шляху чим інші
-## Idea
+## Facts
+```dataview
+LIST FROM ""
+WHERE contains(file.outlinks.file.name, this.file.name)
+AND contains(Type, "fact")
+```
+## Topics
+```dataview
+LIST FROM ""
+WHERE contains(file.outlinks.file.name, this.file.name)
+AND contains(Type, "topic")
+```
+## Ideas
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "idea")
 ```
-## Question
+## Questions
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "question")
 ```
-## Answer
+## Answers
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "answer")
 ```
-## Bug
+## Bugs
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "bug")
 ```
-## Fix
+## Fixs
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "fix")
 ```
-## Root
+## Roots
 ```dataview
 LIST FROM ""
 WHERE contains(file.inlinks.file.name, this.file.name)
 ```
 
-## Child
+## Childs
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
