--- a/Комунікація між модулями.md
+++ b/Комунікація між модулями.md
@@ -1,13 +1,9 @@
 ---
-Type: fact
+Type: topic
 tags: 
 Data: 2023-12-06
 ---
-![[m.png]]
-Так може виглядати схема комунікацій([[Комунікація між модулями]]) в якомусь проекті. Як згадував раніше є в нас такі модулі [[Connector Manager]] і [[Server Logic]] і [[Master]]. Tasker на цьому прикладі і являються [[Server Logic]] а gpt 3 і Translator це [[Connector Manager]]. У всіх модулях повинні бути карти щоб знали куди відправляти пакет.
-### Приклад великою схеми
-![[pp.jpg]]
-Як в цьому прикладі то Client 7 має вже відправити по більш кородшому шляху чим інші
+[[Connector Manager]] і [[Server Logic]] і [[Master]]
 ## Facts
 ```dataview
 LIST FROM ""
