--- a/Приклад запущених модулів у базі даних.md
+++ b/Приклад запущених модулів у базі даних.md
@@ -1,9 +1,51 @@
 ---
-Type: topic
+Type: fact
 tags: 
 Data: 2023-12-06
 ---
-Комунікація між модулями [[Connector Manager]] і [[Server Logic]] буде здієснена за допомогою нашого api та [[Master]] та його [[Карта Master]] 
+Їх структуру можна подивитись тут [[Запущені модулів у Master]]
+
+## Приклад запущених модулів у базі даних
+
+```json
+{
+  "модулі": [
+   
+    {
+       "hash":"3xw1",
+      "name_container": "Gpt",
+      "hash_tamplate":"2xd2",
+      "name":"gpt",
+      "name_node":"niger",
+      "connections": ["3xw3"]
+    },
+    {
+      "hash":"3xw2",
+      "name_container": "gpt",
+      "hash_tamplate":"2xd3",
+      "name":"gpt",
+      "name_node":"niger",
+      "connections": ["3xw4"]
+    },
+    {
+      "hash":"3xw3",
+      "name_container": "Tasker",
+      "hash_tamplate":"2xdr",
+      "name":"local tasker",
+      "name_node":"niger",
+      "connections": []
+    },
+     {
+       "hash":"3xw4",
+      "name_container": "Tasker",
+       "hash_tamplate":"2xde",
+      "name":"global tasker",
+      "name_node":"niger",
+      "connections": []
+    }
+  ]
+}
+```
 ## Facts
 ```dataview
 LIST FROM ""
