--- a/Приклад шаблона у базі даних.md
+++ b/Приклад шаблона у базі даних.md
@@ -1,9 +1,49 @@
 ---
-Type: topic
+Type: fact
 tags: 
 Data: 2023-12-06
 ---
-Комунікація між модулями [[Connector Manager]] і [[Server Logic]] буде здієснена за допомогою нашого api та [[Master]] та його [[Карта Master]] 
+Це все треба для [[Карта Master]]
+Так зберігається [[Шаблони модулів у Master]] у [[База даних]]
+## Приклад шаблона в [[База даних]]
+```json
+{
+  "шаблон": [
+    {
+      "hash_tamplate":"2xde",
+      "name_container": "Tasker",
+      "name_node":"test",
+      "name":"Local Tasker",
+      "count":"1",
+      "connections": [""]
+    },
+    {
+      "hash_tamplate":"2xdr",
+      "name_container": "Tasker",
+      "name_node":"test",
+      "name":"Local Tasker",
+      "count":"1",
+      "connections": [""]
+    },
+     {
+      "hash_tamplate":"2xd2",
+      "name_container": "Gpt",
+      "name_node":"test",
+      "name":"Gpt",
+      "count":"1",
+      "connections": ["2xdr"]
+    },
+      {
+      "hash_tamplate":"2xd3",
+      "name_container": "Gpt",
+      "name_node":"test",
+      "name":"Gpt",
+      "count":"1",
+      "connections": ["2xde"]
+    }
+  ]
+}
+```
 ## Facts
 ```dataview
 LIST FROM ""
