--- a/Комунікація між модулями.md
+++ b/Комунікація між модулями.md
@@ -3,7 +3,7 @@ Type: topic
 tags: 
 Data: 2023-12-06
 ---
-Комунікація буде відбуватись між модулями([[Server Logic]] і [[Connector Manager]]) за допомогою rest api(http) Server Logic буде мати веб-сервер на який буде прийматись пакет([[Структура пакета відправки]]) з даними та він буде відправлятись комусь іншому  на виконання. 
+Комунікація буде відбуватись між модулями([[RESTServer]] і [[RESTConnector]]) за допомогою rest api(http) Server Logic буде мати веб-сервер на який буде прийматись пакет([[Структура пакета відправки]]) з даними та він буде відправлятись комусь іншому  на виконання. 
 ## Facts
 ```dataview
 LIST FROM ""
