--- a/Приклад запущених модулів у базі даних.md
+++ b/Приклад запущених модулів у базі даних.md
@@ -3,8 +3,8 @@ Type: fact
 tags: 
 Data: 2023-12-06
 ---
-Їх структуру можна подивитись тут [[Запущені модулів у Master]]
-
+Їх структуру можна подивитись тут [[Запущені модулі у Master]]
+Кожен модуль буде окремим файлом
 ## Приклад запущених модулів у базі даних
 
 ```json
