--- a/Приклад шаблона у базі даних.md
+++ b/Приклад шаблона у базі даних.md
@@ -5,6 +5,7 @@ Data: 2023-12-06
 ---
 Це все треба для [[Карта Master]]
 Так зберігається [[Шаблони модулів у Master]] у [[База даних]]
+Кожен шаблон це буде окремий файл
 ## Приклад шаблона в [[База даних]]
 ```json
 {
