--- a/Старт.md
+++ b/Старт.md
@@ -3,11 +3,31 @@ Type: topic
 tags: 
 Data: 2023-12-06
 ---
+[[RESTful_K8s_documentation]]
 ## Topics
 ```dataview
 LIST FROM ""
 WHERE contains(Type, "topic")
 ```
+### Завдання не зробленні
+```dataview
+LIST FROM ""
+WHERE contains(Type, "task")
+```
+### Завдання зробленні
+```dataview
+LIST FROM ""
+WHERE contains(Type, "task")
+```
+## Таски не зробленні
+```tasks
+not done
+```
+## Таски зробленні
+```tasks
+done
+```
+
 ## Idea
 ```dataview
 LIST FROM ""
