--- a/Структура пакета відправки.md
+++ b/Структура пакета відправки.md
@@ -3,7 +3,7 @@ Type: fact
 tags: 
 Data: 2023-12-06
 ---
-Структура пакета для [[Connector Manager]] та також так відбувається [[Комунікація між модулями]]
+Структура пакета для [[RESTConnector]] та також так відбувається [[Комунікація між модулями]]
 ## Структура пакета
 1. $type_event - має два типи req/res ці типи це пакет який відправляється на запит і на відповідь
 2. $type_obj - це назва об'єкту для того щоб знати як обробляти data
