--- a/Приклад схеми комунікацій.md
+++ b/Приклад схеми комунікацій.md
@@ -4,7 +4,7 @@ tags:
 Data: 2023-12-06
 ---
 ![[m.png]]
-Так може виглядати схема комунікацій([[Комунікація між модулями]]) в якомусь проекті. Як згадував раніше є в нас такі модулі [[Connector Manager]] і [[Server Logic]] і [[Master]]. Tasker на цьому прикладі і являються [[Server Logic]] а gpt 3 і Translator це [[Connector Manager]]. У всіх модулях повинні бути карти щоб знали куди відправляти пакет.
+Так може виглядати схема комунікацій([[Комунікація між модулями]]) в якомусь проекті. Як згадував раніше є в нас такі модулі [[RESTConnector]] і [[RESTServer]] і [[Master Server]]. Tasker на цьому прикладі і являються [[RESTServer]] а gpt 3 і Translator це [[RESTConnector]]. У всіх модулях повинні бути карти щоб знали куди відправляти пакет.
 ### Приклад великою схеми
 ![[pp.jpg]]
 Як в цьому прикладі то Client 7 має вже відправити по більш кородшому шляху чим інші
