--- a/Імітація запуску проекту.md
+++ b/Імітація запуску проекту.md
@@ -4,9 +4,10 @@ tags:
 Data: 2023-12-06
 ---
 [[RESTful_K8s_documentation]]
-1. [[kubernetes]] запускає контейнер з [[RESTConnector]]
-2. Потім модуль звертається до [[Master Server]] ([[Підключення модулів до Master]])
-3. Після отримання всієї інформації він починає підключатись і працювати
+1. [[kubernetes]] запускає модулі з [[RESTConnector]]
+2. [[kubernetes]] запускає модулі з [[RESTServer]]
+3. Потім модуль звертається до [[Master Server]] ([[Підключення модулів до Master]])
+4. Після отримання всієї інформації він починає підключатись і працювати
 ## Facts
 ```dataview
 LIST FROM ""
