--- a/Перевірити швидкість.md
+++ b/Перевірити швидкість.md
@@ -1,70 +1,65 @@
 ---
-Type: topic
+Type: task
 tags: 
-Data: 2023-12-06
+Data: 2023-12-14
 ---
-[[RESTful_K8s_documentation]]
+Хотів ще перевірити швидкість Crow для передачі файлів по [[WebSocket]]
+- [ ] Перевірити швидкість передачі файлів з [[RESTConnector]] на [[RESTServer]] по [[WebSocket]]
+## Facts
+```dataview
+LIST FROM ""
+WHERE contains(file.outlinks.file.name, this.file.name)
+AND contains(Type, "fact")
+```
 ## Topics
 ```dataview
 LIST FROM ""
-WHERE contains(Type, "topic")
+WHERE contains(file.outlinks.file.name, this.file.name)
+AND contains(Type, "topic")
 ```
-### Завдання не зробленні
-```dataview
-LIST FROM ""
-WHERE contains(Type, "task")
-```
-### Завдання зробленні
-```dataview
-LIST FROM ""
-WHERE contains(Type, "done")
-```
-## Таски не зробленні
-```tasks
-not done
-```
-## Таски зробленні
-```tasks
-done
-```
-
-## Idea
+## Ideas
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "idea")
 ```
-## Question
+## Questions
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "question")
 ```
-## Answer
+## Answers
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "answer")
 ```
-## Bug
+## Bugs
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "bug")
 ```
-## Fix
+## Fixs
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
 AND contains(Type, "fix")
 ```
-## Root
+## Tasks
+```dataview
+LIST FROM ""
+WHERE contains(file.outlinks.file.name, this.file.name)
+AND contains(Type, "task")
+```
+## Roots
 ```dataview
 LIST FROM ""
 WHERE contains(file.inlinks.file.name, this.file.name)
 ```
 
-## Child
+## Childs
 ```dataview
 LIST FROM ""
 WHERE contains(file.outlinks.file.name, this.file.name)
